examples/datalog/18_advanced_patterns/31_conditional_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_cond_agg
Knowledge graph 'test_cond_agg' created.
Switched to knowledge graph: test_cond_agg
> .kg use test_cond_agg
Switched to knowledge graph: test_cond_agg
> +sales[("North", 100), ("South", 200), ("North", 150), ("South", 50)].
Inserted 4 fact(s) into 'sales'.
> +north_sum(<SUM:Amt>) :- sales("North", Amt).
Script error: Parse error: Invalid term: '<SUM:Amt>'
